@@ -21,8 +21,7 @@ import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
-import static com.seroter.unknownPaw.exception.ErrorCode.INVALID_PASSWORD;
-import static com.seroter.unknownPaw.exception.ErrorCode.NICKNAME_ALREADY_EXISTS;
+import static com.seroter.unknownPaw.exception.ErrorCode.*;
 
 @Service
 @RequiredArgsConstructor
@@ -34,14 +33,15 @@ public class MemberService {
     private final PetOwnerRepository petOwnerRepository;
     private final PetSitterRepository petSitterRepository;
     private final PasswordEncoder passwordEncoder;
+    private final PetService petService;
 
-    // 회원가입
+    // [1] 회원가입
     public MemberResponseDTO register(MemberRequestDTO dto) {
         if (memberRepository.findByEmail(dto.getEmail()).isPresent()) {
-            throw new CustomException(ErrorCode.EMAIL_ALREADY_EXISTS);
+            throw new CustomException(EMAIL_ALREADY_EXISTS);
         }
         if (memberRepository.findByNickname(dto.getNickname()).isPresent()) {
-            throw new CustomException(ErrorCode.NICKNAME_ALREADY_EXISTS);
+            throw new CustomException(NICKNAME_ALREADY_EXISTS);
         }
 
         Member member = Member.builder()
@@ -64,54 +64,34 @@ public class MemberService {
                 .build();
         memberRepository.save(member);
 
+        // Pet 등록
         if (dto.getPetInfo() != null) {
-            PetDTO petDTO = dto.getPetInfo();
-            Pet pet = Pet.builder()
-                    .member(member)
-                    .petName(petDTO.getPetName())
-                    .breed(petDTO.getBreed())
-                    .petBirth(petDTO.getPetBirth())
-                    .petGender(petDTO.isPetGender())
-                    .weight(petDTO.getWeight())
-                    .petMbti(petDTO.getPetMbti())
-                    .neutering(petDTO.isNeutering())
-                    .petIntroduce(petDTO.getPetIntroduce())
-                    .build();
-            petRepository.save(pet);
+            petService.registerMyPet(member, dto.getPetInfo());
         }
 
-        return new MemberResponseDTO(member);
+        return MemberResponseDTO.builder()
+                .mid(member.getMid())
+                .email(member.getEmail())
+                .nickname(member.getNickname())
+                .profileImagePath(member.getProfileImagePath())
+                .pawRate(member.getPawRate())
+                .build();
     }
-    //  로그인 인증 처리
+
+    // [2] 로그인 인증
     public Optional<Member> authenticate(LoginRequestDTO dto) {
-        Optional<Member> memberOpt = memberRepository.findByEmail(dto.getEmail());
-        if (memberOpt.isEmpty()) {
-            return Optional.empty();
-        }
-
-        Member member = memberOpt.get();
-        if (passwordEncoder.matches(dto.getPassword(), member.getPassword())) {
-            return Optional.of(member);
-        }
-
-        return Optional.empty();
-    }
-    // 로그인 관련
-    public Optional<Member> findByEmail(String email) {
-        return memberRepository.findByEmail(email);
-    }
-    public Optional<Member> findByEmailAndFromSocial(String email, boolean fromSocial) {
-        return memberRepository.findByEmailAndFromSocial(email, fromSocial);
+        return memberRepository.findByEmail(dto.getEmail())
+                .filter(member -> passwordEncoder.matches(dto.getPassword(), member.getPassword()));
     }
 
-    // 회원 정보 단건 조회
+    // [3] 회원 정보 단건 조회
     public MemberResponseDTO getMemberById(Long mid) {
         Member member = memberRepository.findById(mid)
                 .orElseThrow(() -> new EntityNotFoundException("해당 회원을 찾을 수 없습니다. mid = " + mid));
         return new MemberResponseDTO(member);
     }
 
-    // 회원 정보 업데이트
+    // [4] 회원 정보 업데이트
     @Transactional
     public Member updateMember(Member member, MemberUpdateRequestDTO updateRequestDTO) {
         if (updateRequestDTO.getNickname() != null && !updateRequestDTO.getNickname().trim().isEmpty()) {
@@ -131,7 +111,7 @@ public class MemberService {
         return memberRepository.save(member);
     }
 
-    // 비밀번호 변경
+    // [5] 비밀번호 변경
     @Transactional
     public void changePassword(Member member, PasswordChangeRequestDTO dto) {
         if (!passwordEncoder.matches(dto.getCurrentPassword(), member.getPassword())) {
@@ -142,22 +122,12 @@ public class MemberService {
         memberRepository.save(member);
     }
 
-    // 특정 회원의 펫 리스트 반환
+    // [6] 특정 회원의 펫 리스트 반환 (PetService 위임)
     public List<PetDTO> getMemberPets(Long mid) {
-        return petRepository.findAllByMemberId(mid).stream()
-                .map(pet -> PetDTO.builder()
-                        .petId(pet.getPetId())
-                        .petName(pet.getPetName())
-                        .breed(pet.getBreed())
-                        .petBirth(pet.getPetBirth())
-                        .petMbti(pet.getPetMbti())
-                        .weight(pet.getWeight())
-                        .petIntroduce(pet.getPetIntroduce())
-                        .build())
-                .collect(Collectors.toUnmodifiableList());
+        return petService.getPetsByMemberId(mid);
     }
 
-    // 특정 회원의 모든 글(Owner + Sitter) 리스트 반환
+    // [7] 특정 회원의 모든 글(Owner + Sitter) 리스트 반환
     public List<PostDTO> getMemberPosts(Long mid) {
         List<Post> allPosts = new ArrayList<>();
         allPosts.addAll(petOwnerRepository.findByMember_Mid(mid));
@@ -166,18 +136,18 @@ public class MemberService {
         return allPosts.stream().map(PostDTO::fromEntity).collect(Collectors.toUnmodifiableList());
     }
 
-    // 회원 탈퇴 (마스킹)
+    // [8] 회원 탈퇴 (마스킹)
     @Transactional
     public void withdrawMember(Long memberId, MemberRequestDTO requestDTO) {
         Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+                .orElseThrow(() -> new CustomException(MEMBER_NOT_FOUND));
 
         if (!member.isFromSocial() && requestDTO != null && requestDTO.getPassword() != null) {
             if (!passwordEncoder.matches(requestDTO.getPassword(), member.getPassword())) {
-                throw new CustomException(ErrorCode.PASSWORD_REQUIRED);
+                throw new CustomException(PASSWORD_REQUIRED);
             }
         } else if (!member.isFromSocial() && (requestDTO == null || requestDTO.getPassword() == null)) {
-            throw new CustomException(ErrorCode.PASSWORD_REQUIRED);
+            throw new CustomException(PASSWORD_REQUIRED);
         }
 
         member.setStatus(Member.MemberStatus.DELETED);
@@ -185,11 +155,10 @@ public class MemberService {
         member.setAddress(null);
         member.setPhoneNumber(null);
         member.setEmail("deleted_" + member.getMid() + "@example.com");
-
         memberRepository.save(member);
     }
 
-    // 닉네임, 이메일, 휴대폰 번호 중복 체크
+    // [9] 중복 체크
     @Transactional(readOnly = true)
     public boolean isNicknameDuplicated(String nickname) {
         return nickname == null || nickname.trim().isEmpty() || memberRepository.findByNickname(nickname.trim()).isPresent();
@@ -201,27 +170,27 @@ public class MemberService {
         return memberRepository.existsByPhoneNumber(phoneNumber);
     }
 
-    // **간단 프로필(DTO) 반환**
+    // [10] 간단 프로필(DTO) 반환
     public MemberResponseDTO.Simple getSimpleProfileInfo(Long mid) {
         return memberRepository.findSimpleProfileInfo(mid)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+                .orElseThrow(() -> new CustomException(MEMBER_NOT_FOUND));
     }
 
-    // 나의 펫 포함 간단 프로필 (이메일 기준)
+    // [11] 나의 펫 포함 간단 프로필 (이메일 기준)
     public MemberResponseDTO getMySimpleProfileWithPets(String email) {
         Member member = memberRepository.findByEmailWithPets(email)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+                .orElseThrow(() -> new CustomException(MEMBER_NOT_FOUND));
         return new MemberResponseDTO(member);
     }
 
-    // 이메일로 mid 찾기
+    // [12] 이메일로 mid 찾기
     public Long getMemberIdByEmail(String email) {
         return memberRepository.findByEmail(email)
                 .map(Member::getMid)
-                .orElseThrow(() -> new CustomException(ErrorCode.MEMBER_NOT_FOUND));
+                .orElseThrow(() -> new CustomException(MEMBER_NOT_FOUND));
     }
 
-    // 대시보드/통계/평점 관련 (필요 시)
+    // [13] 대시보드/통계/평점 관련
     public List<Object[]> getDashboardData(Long mid) {
         return memberRepository.findMemberWithAllData(mid);
     }
@@ -235,20 +204,18 @@ public class MemberService {
         return memberRepository.findAllMemberPawRates();
     }
 
-    // 닉네임만 단독 업데이트
+    // [14] 닉네임만 단독 업데이트
     public void updateNickname(Long memberId, String newNickname) {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 회원입니다."));
         member.setNickname(newNickname);
         memberRepository.save(member);
     }
-    // ✅ 회원 요약 정보 조회
 
+    // [15] 상세 프로필 (펫 포함)
     public MemberResponseDTO getSimpleProfile(Long mid) {
         Member member = memberRepository.findSimpleProfile(mid)
                 .orElseThrow(() -> new IllegalArgumentException("해당 회원이 없습니다."));
-
-        // 디버깅을 위한 로그
         log.info("Found member: {}", member);
         log.info("Member's pets: {}", member.getPets());
 
@@ -262,7 +229,7 @@ public class MemberService {
                 .introduce(member.getIntroduce())
                 .emailVerified(member.isEmailVerified())
                 .pets(member.getPets().stream()
-                        .map((Pet pet) -> new PetDTO(
+                        .map(pet -> new PetDTO(
                                 pet.getPetId(),
                                 pet.getPetName(),
                                 pet.getBreed(),
@@ -272,10 +239,35 @@ public class MemberService {
                                 pet.getPetMbti(),
                                 pet.isNeutering(),
                                 pet.getPetIntroduce(),
+                                pet.getStatus() != null ? pet.getStatus().name() : null,
+                                pet.getRegDate(),
+                                pet.getModDate(),
                                 pet.getMember().getMid()
                         ))
-                        .toList()
-                )
+                        .collect(Collectors.toList()))
                 .build();
+    }
+
+    // 추가: 이메일 + 소셜로 회원 찾기
+    public Optional<Member> findByEmail(String email) {
+        return memberRepository.findByEmail(email);
+    }
+    public Optional<Member> findByEmailAndFromSocial(String email, boolean fromSocial) {
+        return memberRepository.findByEmailAndFromSocial(email, fromSocial);
+    }
+
+    // 추가: PetOwner/PetSitter 연관 데이터 조회
+    public Member getMemberWithPetOwners(Long mid) {
+        return memberRepository.findMemberWithPetOwners(mid)
+                .orElseThrow(() -> new IllegalArgumentException("해당 회원이 존재하지 않습니다."));
+    }
+    public Member getMemberWithPetSitters(Long mid) {
+        return memberRepository.findMemberWithPetSitters(mid)
+                .orElseThrow(() -> new IllegalArgumentException("해당 회원이 존재하지 않습니다."));
+    }
+
+    // 추가: 전화번호 중복 체크 (개인정보 수정 시)
+    public boolean isPhoneNumberExists(String phoneNumber) {
+        return memberRepository.existsByPhoneNumber(phoneNumber);
     }
 }
